<resources>
    <string name="app_name">Messenger</string>

    <!-- activity_login -->
    <string name="login_input_layout_hint">login</string>
    <string name="password_input_layout_hint">password</string>
    <string name="login_button">login</string>
    <string name="create_account_button">create new account</string>

    <!-- activity_registration -->
    <string name="registration_button">create new account</string>
    <string name="registration_text_view">creating a new user</string>
    <string name="registration_password_helper_text">the password must contain at least 8 characters</string>
    <string name="registration_repeat_password_helper_text">repeat the password</string>
    <string name="registration_login_helper_text">the login must contain both numbers and symbols</string>

</resources>